chore: prettier format
Signed-off-by: peterpeterparker <david.dalbusco@outlook.com>

--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -17,7 +17,8 @@ section.about {
       a {
         text-decoration: none;
 
-        &:hover, &:active {
+        &:hover,
+        &:active {
           color: inherit;
           text-decoration: underline;
         }
