--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -6,12 +6,13 @@ footer {
     text-shadow: 1px 1px var(--color-secondary);
   }
 
-  p, h3 {
+  p,
+  h3 {
     margin: 0;
     white-space: pre-wrap;
     text-align: center;
   }
-  
+
   a {
     color: #ffffff;
 
