--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -52,7 +52,13 @@ section.header {
 }
 
 @keyframes backgroundAnimation {
-  0%{background-position:0 50%}
-  75%{background-position:100% 50%}
-  100%{background-position:0 50%}
+  0% {
+    background-position: 0 50%;
+  }
+  75% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0 50%;
+  }
 }
