--- a/src/theme/blog.scss
+++ b/src/theme/blog.scss
@@ -7,15 +7,20 @@ section.blog {
 section.post {
   padding: 6rem 0 0;
 
-  h1, h2, h3 {
+  h1,
+  h2,
+  h3 {
     margin: 2.75rem 0 1.25rem;
   }
 
-  h1, h2, h3 {
+  h1,
+  h2,
+  h3 {
     text-shadow: 1px 1px var(--color-secondary);
   }
 
-  p.date, p.tags {
+  p.date,
+  p.tags {
     font-weight: 300;
     font-size: 1rem;
   }
