--- a/src/theme/fonts.scss
+++ b/src/theme/fonts.scss
@@ -19,7 +19,8 @@
   font-weight: 400;
   font-display: swap;
   src: url("/fonts/open-sans-v17-latin-regular.eot"); /* IE9 Compat Modes */
-  src: local("Open Sans Regular"), local("OpenSans-Regular"), url("/fonts/open-sans-v17-latin-regular.eot?#iefix") format("embedded-opentype"),
+  src: local("Open Sans Regular"), local("OpenSans-Regular"),
+    url("/fonts/open-sans-v17-latin-regular.eot?#iefix") format("embedded-opentype"),
     /* IE6-IE8 */ url("/fonts/open-sans-v17-latin-regular.woff2") format("woff2"),
     /* Super Modern Browsers */ url("/fonts/open-sans-v17-latin-regular.woff") format("woff"),
     /* Modern Browsers */ url("/fonts/open-sans-v17-latin-regular.ttf") format("truetype"),
