--- a/src/theme/input.scss
+++ b/src/theme/input.scss
@@ -1,4 +1,7 @@
-input[type="text"], input[type="tel"], input[type="email"], textarea {
+input[type="text"],
+input[type="tel"],
+input[type="email"],
+textarea {
   width: 100%;
   border-bottom: 1px solid #e9e9e9;
   padding: 1.45rem;
@@ -13,16 +16,18 @@ input[type="text"], input[type="tel"], input[type="email"], textarea {
   }
 
   &::placeholder {
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
+      sans-serif;
   }
 }
 
-input[type="submit"], a.button {
+input[type="submit"],
+a.button {
   margin: 2.75rem 0 0;
 }
 
-input[type="submit"], a.button * {
+input[type="submit"],
+a.button * {
   border-radius: 8px;
   background-color: var(--color-primary);
   padding: 16px;
@@ -34,7 +39,8 @@ input[type="submit"], a.button * {
   font-weight: 300;
   border: 0;
 
-  &:hover, &:active {
+  &:hover,
+  &:active {
     background-color: var(--color-highlight);
     text-decoration: none;
 
@@ -61,7 +67,8 @@ a.button {
     border: 1px solid var(--color-secondary);
   }
 
-  &:hover, &:active {
+  &:hover,
+  &:active {
     text-decoration: none;
   }
 
