--- a/src/theme/project.scss
+++ b/src/theme/project.scss
@@ -1,5 +1,5 @@
-section.project, section.factsheet {
-
+section.project,
+section.factsheet {
   article {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -11,7 +11,8 @@ section.project, section.factsheet {
 }
 
 section.factsheet {
-  article, p {
+  article,
+  p {
     grid-gap: 0 1.75rem;
 
     a {
