--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,22 +1,22 @@
 :root {
   --color-primary: #2d294c;
-  --color-primary-rgb: 45,41,76;
+  --color-primary-rgb: 45, 41, 76;
   --color-primary-contrast: #ffffff;
-  --color-primary-contrast-rgb: 255,255,255;
+  --color-primary-contrast-rgb: 255, 255, 255;
   --color-primary-shade: #282443;
   --color-primary-tint: #423e5e;
 
-  --color-secondary: #81A8C7;
-  --color-secondary-rgb: 129,168,199;
+  --color-secondary: #81a8c7;
+  --color-secondary-rgb: 129, 168, 199;
   --color-secondary-contrast: #000000;
-  --color-secondary-contrast-rgb: 0,0,0;
+  --color-secondary-contrast-rgb: 0, 0, 0;
   --color-secondary-shade: #7294af;
   --color-secondary-tint: #8eb1cd;
 
   --color-highlight: #ff65a9;
-  --color-highlight-rgb: 255,101,169;
+  --color-highlight-rgb: 255, 101, 169;
   --color-highlight-contrast: white;
-  --color-highlight-contrast-rgb: 255,255,255;
+  --color-highlight-contrast-rgb: 255, 255, 255;
   --color-highlight-shade: #e05995;
   --color-highlight-tint: #ff74b2;
 }
