feat: add discoverweekly.dev
Signed-off-by: peterpeterparker <david.dalbusco@outlook.com>

--- a/src/components/projects/projects.scss
+++ b/src/components/projects/projects.scss
@@ -137,6 +137,18 @@ section.other-projects {
         }
       }
 
+      &.discoverweeklydev {
+        > div {
+          background: #161B22;
+          color: white;
+
+          &.details {
+            background: rgb(109,40,217);
+            color: white;
+          }
+        }
+      }
+
       &.wooof {
         > div {
           &.details {
