--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -30,6 +30,10 @@ section.header {
       box-shadow: 1px 1px var(--color-primary);
       border: 1px solid var(--color-primary);
 
+      img {
+        border-radius: 50%;
+      }
+
       @media (max-height: 560px) {
         display: none;
       }
