style: code and blog spacing
Signed-off-by: peterpeterparker <david.dalbusco@outlook.com>

--- a/src/theme/_code.scss
+++ b/src/theme/_code.scss
@@ -6,6 +6,7 @@ deckgo-highlight-code {
   --deckgo-highlight-code-carbon-border-radius: 1px;
   --deckgo-highlight-code-font-size: 0.9em;
   --deckgo-highlight-code-line-height: 1em;
+  --deckgo-highlight-code-scroll: hidden;
 }
 
 code {
