--- a/src/theme/_grid.scss
+++ b/src/theme/_grid.scss
@@ -3,5 +3,6 @@ div.grid {
 
 	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 	grid-template-rows: auto;
-	grid-gap: 1.75rem;
+	grid-column-gap: 1.75rem;
+	grid-row-gap: 2.25rem;
 }
