feat: review colors

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,17 +1,10 @@
 :root {
-	--color-primary: #2d294c;
-	--color-primary-rgb: 45, 41, 76;
+	--color-primary: #000000;
+	--color-primary-rgb: 0, 0, 0;
 	--color-primary-contrast: #ffffff;
 	--color-primary-contrast-rgb: 255, 255, 255;
-	--color-primary-shade: #282443;
-	--color-primary-tint: #423e5e;
-
-	--color-secondary: #81a8c7;
-	--color-secondary-rgb: 129, 168, 199;
-	--color-secondary-contrast: #000000;
-	--color-secondary-contrast-rgb: 0, 0, 0;
-	--color-secondary-shade: #7294af;
-	--color-secondary-tint: #8eb1cd;
+	--color-primary-shade: #000000;
+	--color-primary-tint: #1a1a1a;
 
 	--color-tertiary: #e2c89f;
 	--color-tertiary-rgb: 226, 200, 159;
