feat: review size and border

--- a/src/theme/_blog.scss
+++ b/src/theme/_blog.scss
@@ -1,6 +1,6 @@
 deckgo-highlight-code {
-	box-shadow: 3px 3px black;
-	border: 1px solid black;
+	border: 0.45rem solid black;
+
 	--deckgo-highlight-code-carbon-toolbar-display: none;
 	--deckgo-highlight-code-carbon-header-padding: 8px;
 	--deckgo-highlight-code-carbon-border-radius: 1px;
