feat: add talks

--- a/src/theme/theme.scss
+++ b/src/theme/theme.scss
@@ -285,7 +285,7 @@ hgroup {
 ul {
 	padding: 0;
 	margin: 0 0 1.45rem 1.45rem;
-	list-style-position: outside;
+	list-style-type: square;
 	list-style-image: none;
 }
 ol {
