--- a/src/theme/_blog.scss
+++ b/src/theme/_blog.scss
@@ -29,9 +29,14 @@ article p:first-child img {
 }
 
 p img {
-	max-width: 960px;
 	margin: 1.25rem auto 3.75rem;
 	display: block;
+
+	max-width: 100%;
+
+	@media screen and (min-width: 960px) {
+		max-width: 960px;
+	}
 }
 
 article ol,
