--- a/src/theme/theme.scss
+++ b/src/theme/theme.scss
@@ -362,7 +362,7 @@ p *:last-child {
 li > p {
 	margin-bottom: calc(1.45rem / 2);
 }
-code {
+p code {
 	font-size: 0.85rem;
 	line-height: 1.45rem;
 }
