style: downscale base font and tweak colors a bit

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,21 +1,21 @@
 :root {
 	--color-primary: #000000;
 	--color-primary-rgb: 0, 0, 0;
-	--color-primary-contrast: #ffffff;
+	--color-primary-contrast: #fafafa;
 	--color-primary-contrast-rgb: 255, 255, 255;
 	--color-primary-shade: #000000;
 	--color-primary-tint: #1a1a1a;
 
-	--color-tertiary: #e2c89f;
-	--color-tertiary-rgb: 226, 200, 159;
+	--color-tertiary: #f4e9cd;
+	--color-tertiary-rgb: 244, 233, 205;
 	--color-tertiary-contrast: #000000;
 	--color-tertiary-contrast-rgb: 0, 0, 0;
-	--color-tertiary-shade: #c7b08c;
-	--color-tertiary-tint: #e5cea9;
+	--color-tertiary-shade: #d7cdb4;
+	--color-tertiary-tint: #f5ebd2;
 
 	--color-highlight: #ff65a9;
 	--color-highlight-rgb: 255, 101, 169;
-	--color-highlight-contrast: white;
+	--color-highlight-contrast: #fafafa;
 	--color-highlight-contrast-rgb: 255, 255, 255;
 	--color-highlight-shade: #e05995;
 	--color-highlight-tint: #ff74b2;
