--- a/src/theme/theme.scss
+++ b/src/theme/theme.scss
@@ -223,9 +223,8 @@ textarea {
 	font: inherit;
 }
 html {
-	font:
-		112.5%/1.45em georgia,
-		serif;
+	--html-font-size: 16px;
+	font-size: var(--html-font-size, 16px);
 	box-sizing: border-box;
 	overflow-y: scroll;
 }
@@ -386,9 +385,4 @@ abbr[title] {
 	border-bottom: 1px dotted hsla(0, 0%, 0%, 0.5);
 	cursor: help;
 	text-decoration: none;
-}
-@media only screen and (max-width: 480px) {
-	html {
-		font-size: 100%;
-	}
 }
