feat: pages background colors

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -19,4 +19,11 @@
 	--color-highlight-contrast-rgb: 255, 255, 255;
 	--color-highlight-shade: #e05995;
 	--color-highlight-tint: #ff74b2;
+
+	--color-light: #dddddd;
+	--color-light-rgb: 221, 221, 221;
+	--color-light-contrast: #000000;
+	--color-light-contrast-rgb: 0, 0, 0;
+	--color-light-shade: #c2c2c2;
+	--color-light-tint: #e0e0e0;
 }
